tests/testcases/invalid/semantic/82_decrement_literal.ciel
// Error: decrement on literal
int main() {
    // Error: literal is rvalue, cannot decrement
    100--;

    return 0;
}
